no HC limit